load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/nilebox/brokernetes/cmd/brokernetes",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd:go_default_library",
        "//cmd/brokernetes/app:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
        "//vendor/go.uber.org/zap/zapcore:go_default_library",
    ],
)

go_binary(
    name = "brokernetes",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
