load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["controller.go"],
    importpath = "github.com/nilebox/brokernetes/pkg/brokernetes",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/broker/brokerapi:go_default_library",
        "//pkg/broker/controller:go_default_library",
        "//pkg/util/zappers:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/github.com/xeipuuv/gojsonschema:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
    ],
)
