load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["storage.go"],
    importpath = "github.com/nilebox/brokernetes/pkg/storage",
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/nilebox/broker-server/pkg/stateful/storage:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["storage_test.go"],
    embed = [":go_default_library"],
    deps = ["//vendor/github.com/nilebox/broker-server/pkg/stateful/storage:go_default_library"],
)
