load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["brokernetes.go"],
    importpath = "github.com/nilebox/brokernetes/cmd/brokernetes/app",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/broker/brokerserver:go_default_library",
        "//pkg/brokernetes:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
    ],
)
