load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "controller.go",
        "error.go",
    ],
    importpath = "github.com/nilebox/brokernetes/pkg/broker/controller",
    visibility = ["//visibility:public"],
    deps = ["//pkg/broker/brokerapi:go_default_library"],
)
